Fix photo wrong display and white-space-wrap

--- a/pre/sass/quest.sass
+++ b/pre/sass/quest.sass
@@ -343,6 +343,10 @@
     #qd-guide
         &.qd-block
             margin-top: 65px
+
+        > span
+            white-space: break-spaces    
+
         #qd-accept
             width: 30%
             height: 40px
